test/Harper/Tests/Good/issue016_unreachableDefiniteAssignment.har
f :: Integer -> Integer;
f n = {
  var (x :: Integer);
  
  if (n == 42) {
    return n;
  }
  else {
    return 0;
  }
  // Unreachable.
  (result :: Integer) = x + n;
  return result;
};

main :: Integer;
main = f 42;