test/Harper/Tests/Bad/UsingDataAccessInsideValueType.har
value Box a = {
    data = {
        a :: a;
    }

    set :: a -> Box a;
    set a = {
        this.data.a := a;
        return this;
    };
};

main :: Integer;
main = {
    (b :: Box Integer) = val Box { a = 42 };
    (b' :: Box Integer) = b.set 0;
    return b.a;
};